--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,11 @@
-﻿@{
+﻿
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Cart Item Successfully Added </h1>
+    <a asp-action="Index" asp-controller="HomePage" class="btn btn-danger">Go back to Home page</a>
+    <a asp-action="Index" asp-controller="Checkout" class="btn btn-success">Go to Checkout</a>
 </div>
