--- a/Views/HomePage/Index.cshtml
+++ b/Views/HomePage/Index.cshtml
@@ -33,7 +33,7 @@
 <h3> <div class="center"> from our wide range of books to see which one fits your needs.</div></h3>
 <a asp-action="Index" asp-controller="Checkout" class="btn btn-success">View Cart</a>
 
-
+<a asp-action="Index" asp-controller="AddAdmin" class="btn btn-success">Go to admin page</a> 
 <div class="book-grid">
     @foreach (var item in Model)
     {
@@ -54,11 +54,13 @@
                     </div>
                     <div class="static">
                         <p class="price">@item.Price</p>
+                   
                         <form asp-controller="HomePage" asp-action="AddToCart" method="post">
                             <input type="hidden" name="ProductId" value="@item.ProductId" />
                             <input type="hidden" name="ProductNames" value="@item.ProductNames" />
                             <input type="hidden" name="Description" value="@item.Description" />
                             <input type="hidden" name="Price" value="@item.Price" />
+                        
                             <button type="submit" class="btn btn-primary">Add to Cart</button>
                         </form>
                             
