--- a/Views/Login/Create.cshtml
+++ b/Views/Login/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model BookShelfHaven5.Models.Customer
 
 @{
-    ViewData["Title"] = "Log in";
+    ViewData["Title"] = "Create";
 }
 
 <!DOCTYPE html>
@@ -41,9 +41,11 @@
                 <form asp-action="Login" method="post">
                     <div class="form-group">
                         <input type="text" class="form-control" id="username" name="username" placeholder="Username" required>
+                        <span asp-validation-for="Username" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <input type="password" class="form-control" id="password" name="password" placeholder="Password" required>
+                        <span asp-validation-for="PasswordHash" class="text-danger"></span>
                     </div  class="text-center">>
                     <button type="submit" class="btn btn-primary btn-block">Login</button>
                 </form>
